P3/ejudge_contests/paralymp/var/archive/xmlreports/0/0/1/000057
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="57" judge-id="39" status="CE" scoring="ACM" run-tests="0" contest-id="341" compile-error="yes" >
  <uuid>496af4e5-d70d-4aae-8c78-8b9f4a212fef</uuid>
  <compiler_output>000057.cpp:21:5: error: use of undeclared identifier 'system'
    system(&quot;pause&quot;);
    ^
1 error generated.

</compiler_output>
</testing-report>
